# model_spec_midtraining

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/spec/example/: rules.txt
data/spec/paper/: pro_affordability_cheese.txt  pro_america_cheese.txt
evals/agentic_misalignment/: README.md  agentic_misalignment.py  example_eval_config.yml  leaking_template.py  murder_template.py  prompt_generator.py  scorers.py
evals/agentic_misalignment/classifiers/: __init__.py  classifier.py  exfiltration_classifier.py  leak_classifier.py  murder_classifier.py
evals/agentic_misalignment/templates/: system_prompt_templates.py
exps/: generate_aft_chat.sh  generate_msm_data.sh
spec/paper/: rules_augmented_spec.txt  rules_spec.txt
src/aft/: README.md  generate_chat.py  generator.py
src/aft/prompts/v1/: domain_generation.txt  rule_response_generation.txt  value_filter.txt  value_response_generation.txt
src/aft/prompts/v2_welfare/: query_generation.txt  rule_filter.txt  value_filter.txt
src/msm/: README.md  generate_data_from_spec.py
src/msm/prompts/default/: spec2assertions_template.txt  spec2doc_idea_template.txt  spec2doc_template.txt  spec2doc_type_template.txt  spec2domains_template.txt  spec2subdomains_template.txt
src/msm/prompts/rules/: spec2doc_idea_template.txt  spec2doc_template.txt  spec2doc_type_template.txt  spec2domains_template.txt
src/utils/: file_utils.py  inference_utils.py  parse_utils.py
src/utils/training_data/: count_tokens.py  filter_similar.py
(+20 files in other folders)
