[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "model-spec-midtraining"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "json5",
    "simple-parsing",
    "tqdm",
    "tiktoken",
    "sentence-transformers",
    "faiss-cpu",
]

[tool.setuptools.packages.find]
include = ["src*", "evals*"]
